<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/line_label"
        android:drawablePadding="4dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/label_duration"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewHistory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/line_label"
        android:drawablePadding="4dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/label_time"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="42dp"
        android:drawableLeft="@drawable/line_label"
        android:drawablePadding="4dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/label_date"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewHistory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/label_no_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="228dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTimeSlots"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_time" />

    <Button
        android:id="@+id/btnBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/label_book"
        app:cornerRadius="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="600dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        app:backgroundTint="@color/light_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_store" />

    <ProgressBar
        android:id="@+id/progressBarTimeSlots"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/txtTimeSlots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/label_time_slots_info"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="116dp" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDuration1"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="15 min"
                android:textColor="@android:color/black"
                app:cornerRadius="20dp"
                app:strokeColor="@color/colorAccent" />

            <Button
                android:id="@+id/btnDuration2"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="30 min"
                android:textColor="@android:color/black"
                app:cornerRadius="20dp"
                app:strokeColor="@color/colorAccent" />

            <Button
                android:id="@+id/btnDuration3"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="45 min"
                android:textColor="@android:color/black"
                app:cornerRadius="20dp"
                app:strokeColor="@color/colorAccent" />


            <Button
                android:id="@+id/btnDuration4"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="60 min"
                android:textColor="@android:color/black"
                app:cornerRadius="20dp"
                app:strokeColor="@color/colorAccent" />

        </LinearLayout>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>