<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="390dp"
    android:layout_marginBottom="2dp"
    android:clipToPadding="false"
    android:orientation="horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_market"
        android:layout_width="fill_parent"
        android:layout_height="330dp"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        card_view:cardCornerRadius="12dp"
        card_view:cardElevation="@dimen/card_elevation"
        card_view:contentPadding="@dimen/small_padding">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabBooking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                app:backgroundTint="@color/light_orange"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:srcCompat="@drawable/ic_booking" />

            <ImageView
                android:id="@+id/imgMarket"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:srcCompat="@drawable/card_header" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                card_view:layout_constraintGuide_begin="100dp" />

            <TextView
                android:id="@+id/txtMarketName"
                style="@style/Widget.MaterialComponents.CardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:paddingTop="4dp"
                android:text="Supermercato Carrefour Market"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="15sp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="@+id/guideline" />

            <ImageView
                android:id="@+id/imgLocation"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline"
                app:tint="@color/red"
                card_view:srcCompat="@drawable/ic_location" />

            <TextView
                android:id="@+id/txtMarketAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:layout_marginTop="44dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="Via Vincenzo Monti, 55, Milano"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline" />

            <TextView
                android:id="@+id/txtAttempTimeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/label_attemp_time"
                android:textSize="14sp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txtAttempTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/oval_shape"
                android:backgroundTint="@color/yellow"
                android:elevation="@dimen/medium_elevation"
                android:padding="@dimen/small_padding"
                android:text="10-15 min"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toEndOf="@+id/txtAttempTimeLabel" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabLineUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:clickable="true"
                app:backgroundTint="@color/light_blue"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:srcCompat="@drawable/ic_lineup" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:gravity="center"
                android:text="@string/label_lineup"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/guideline2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:gravity="center"
                android:text="@string/label_booking"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/guideline2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                card_view:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                card_view:layout_constraintGuide_percent="0.5" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>